# simd_playground

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs
src/probability/: common_tests.rs  frequentist_cdf.rs  mod.rs  opt_frequentist_cdf.rs  simd_frequentist_cdf.rs
